src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light;
  color: #1B2836;
  background-color: #f1f1f1;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

html {
  scroll-behavior: smooth;
  padding-bottom: env(safe-area-inset-bottom);
}

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  min-width: 320px;
}

::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: transparent;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

.navigation-bar{
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 100;
}
main{
  padding-bottom: 40px;
}

.mock-exercise{
  width: 120px;
  min-width: 120px;
  min-height: 120px;
  aspect-ratio: 1/1;
  border-radius: 12px;
  background-color: #F9B485;
  scroll-snap-align: start;
  touch-action: pan-x;
}

input::-webkit-date-and-time-value {
  text-align: right;
  padding-right: 0.8rem;
}

